<resources>
    <string name="app_name">NewsFeed</string>
    <string name="source">Source</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="url">URL</string>
    <string name="urlToImage">UrlToImage</string>
    <string name="publishedAt">PublishedAt</string>
    <string name="content">Content</string>
</resources>
